--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+yarn.lock*
+package-lock.json
+Cargo.lock
+
 # Ignored output directory
 /dist
 
@@ -15,5 +25,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ignore package.json file
-package.json
