--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,24 @@ typings/
 # Parcel related files
 dist/
 .cache/
+.parcel-cache/
+
+# Ignored output directory
+/dist
+
+# Ignored cache directory
+.cache
+
+# Ignored dependency directory
+/node_modules
+
+# Ignored Parcel cache files
+.parcel-cache
+
+# Ignored log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignore package.json file
+package.json
